fix my-info spacing; resume text size; bold project desc; added dividers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ body {
     min-height: 100%;
     position: relative;
     overflow-x: hidden;
-    background-color: #262626;
+    background-color: #191919;
     padding-bottom: 120px;
 }
 
@@ -84,7 +84,7 @@ h5,
 h6 {
     margin: 0;
     color: #fff;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 h1 a,
@@ -119,11 +119,9 @@ h6 a:focus {
 }
 
 hr {
-    background-color: #eee;
+    background-color: #888;
     border: 0;
     height: 3px;
-    margin-top: 60px;
-    margin-bottom: 60px;
 }
 
 ul,
@@ -689,48 +687,6 @@ input[type="submit"] {
 .list li:last-child {
     margin-bottom: 0px;
 }
-
-/* Instagram Thumb */
-
-.insta-thumb {
-    float: left;
-    width: 100%;
-}
-
-.insta-thumb a {
-    float: left;
-    width: 33.3%;
-    padding: 5px;
-    overflow: hidden;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
-
-.insta-thumb a img {
-    width: 100%;
-    height: auto;
-    border-radius: 4px;
-    margin: 0;
-}
-
-.insta-thumb a:hover {
-    opacity: 0.6;
-}
-
-.divider1 {
-    height: 1px;
-    width: 100%;
-    background: #222;
-    margin: 60px 0;
-}
-
-.divider2 {
-    height: 1px;
-    width: 100%;
-    background: #222;
-    margin: 60px 0;
-}
-
 
 /* 04. Owl Carousel */
 
@@ -2251,7 +2207,7 @@ input[type="submit"] {
     left: 15px;
     right: 15px;
     top: 246px;
-    background-color: #111;
+    background-color: #191919;
 }
 
 .my-info h6 {
@@ -3309,6 +3265,10 @@ input[type="submit"] {
 .timeline > li .timeline-content p {
     margin-top: 5px;
     margin-bottom: 30px;
+}
+
+.timeline > li .timeline-content li {
+    font-size: 18px;
 }
 
 .timeline > li .timeline-content .timeline-date {
